# booptimize

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
instructions/: low_compression.txt  preserve_original.txt
src/: llm.rs  main.rs  reader.rs  user.rs  util.rs  writer.rs
