[package]
name = "booptimize"
version = "1.0.0"
edition = "2024"


[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false
strip = true
panic = "abort"


[dependencies]
tokio = { version = "1.52", features = ["macros", "rt-multi-thread", "fs", "sync", "time"] }
ollama-rs = "0.3"

clap = { version = "4.6", features = ["derive"] }
indicatif = "0.18"
